--- a/styles/base.css
+++ b/styles/base.css
@@ -31,7 +31,7 @@ footer {
 }
 
 header {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     background-color: var(--secondary-color);
@@ -40,6 +40,7 @@ header {
 
 header h1 {
     padding: 1rem;
+
 }
 
 header img {
