--- a/styles/larger.css
+++ b/styles/larger.css
@@ -56,6 +56,7 @@
     .aboutMe {
         display: grid;
         grid-template-columns: 75% 25%;
+        justify-items: space-between;
         text-align: left;
     }
 
