--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Outfit&display=swap');
 @media screen and (min-width: 600px) {
 
-    header img {
-        box-shadow: 4px 4px 16px 2px #1f1f1f;
+    header h1 {
+        font-size: 1.4rem;
     }
+
+
 
     #menu {
         display: none;
