--- a/styles/temples.css
+++ b/styles/temples.css
@@ -2,7 +2,7 @@
 
 :root {
     --main-color: #f5cb5c;
-    --secondary-color: #1d466b;
+    --secondary-color: #502d4c;
     --gray-tint: #333533;
     --green-tint: #cfdbd5;
     --light-tint: #e8eddf;
@@ -31,8 +31,9 @@ footer {
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    justify-content: center;
     align-items: center;
     background-color: var(--secondary-color);
     color: var(--green-tint);
@@ -40,14 +41,9 @@ header {
 
 header h1 {
     padding: 1rem;
-    text-align: center;
+    text-align: left;
+    font-size: 1rem;
 
-}
-
-header img {
-    max-width: 100px;
-    height: auto;
-    margin: 1rem;
 }
 
 #menu {
