--- a/styles/place.css
+++ b/styles/place.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: var(--primary-font);
+    font-family: 'Outfit', sans-serif;
     width: 100%;
     margin: 0 auto;
 }
