Update css file

--- a/styles/place.css
+++ b/styles/place.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Outfit&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Outfit&display=swap'); */
 
 :root {
     --primary-color: #c72339;
